[Password Generation] Handle not only DidFinishDocumentLoad in PasswordGenerationAgent, but also DidFinishLoad

DidFinishDocumentLoad event happens too early, i.e. some forms might be still unavailable. For example, if some Javascript stuff is involved. See https://cs.chromium.org/chromium/src/third_party/WebKit/public/web/WebFrameClient.h. DidFinishDocumentLoad is triggered before Javascript work. The solution is to handle DidFinishLoad that is triggered after Javascript work.

This bug (crbug.com/452741) points that the processing DidFinishDocumentLoad is also necessary. So, this CL introduces handling both events (DidFinishDocumentLoad and DidFinishLoad)

There are no tests for the given change, because it is very hard to catch the difference between DidFinishDocumentLoad and DidFinishLoad. Even if it is possible, the test will be probably flaky.

BUG=617893

Review-Url: https://codereview.chromium.org/2048603002
Cr-Commit-Position: refs/heads/master@{#398509}

Former-commit-id: c2fd8ecef7c96e060d601ef71894846164581c9a